fixed console errors: unique key props (lodging), css: .host justify content end to flex-end, Collapse: <ul> in <p> fixed to <ul> in <div>

--- a/src/styles/Host.css
+++ b/src/styles/Host.css
@@ -5,7 +5,7 @@
 }
 .host {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   width: 167px;
   gap: 0 10px;
